--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,6 +26,14 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
                     <input type="email" matInput placeholder="Email" formControlName="email">
+
+                    <mat-error
+                    *ngIf="loginForm.controls['email'].hasError('email') && !loginForm.controls['email'].hasError('required')">
+                    Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="loginForm.controls['email'].hasError('required')">
+                    Email is <strong>required</strong>
+                </mat-error>
                   
                 </mat-form-field>
 
@@ -33,6 +41,15 @@
 
                     <mat-label>password</mat-label>
                     <input type="password" matInput formControlName="password">
+
+                    <mat-error
+                    *ngIf="loginForm.controls['password'].hasError('minlength') && !loginForm.controls['password'].hasError('required')">
+                    Password must be 8 characters long, we need another 
+                    {{loginForm.controls['password'].errors.minlength.requiredLength - loginForm.controls['password'].errors.minlength.actualLength}} characters
+                </mat-error>
+                <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
+                    Password is <strong>required</strong>
+                </mat-error>
                    
                 </mat-form-field>
 
